# simple-task-tracker-mcp

./: .gitignore  ALPINE_FIXES_SUMMARY.md  CHANGELOG.md  CLAUDE.md  E2E-TEST-SUMMARY.md  LICENSE  PROJECT_MANAGEMENT_TOOLS_REPORT.md  README.md  SQL_SCHEMAS.md  UTILS_IMPLEMENTATION_REPORT.md  WORKSPACE_FILTERING.md  capture_frontend_errors.py  cross-workspace-audit-prompt.md  debug_task_viewer.py  package-lock.json  package.json  playwright.config.js  pyproject.toml  task-mcp-audit-taskmcp.md  test-alpine-errors.js  test-output.txt  test-task-viewer-verification.js  test_models_validation.py  test_utils_demo.py  test_utils_types.py  verify_databases.py
.claude/: README.md  config.json  project_brief.md
debug_screenshots/: error_report.json  page_content.html
docs/: CLAUDE_DESKTOP_TEST_PROMPT.md  MCP_CONFIGURATION.md  MCP_TEST_PROMPT.md  MIGRATION_GUIDE_workflow-mcp_to_task-mcp.md  cleanup-execution-report.md  entity-badge-usage.md  entity-pagination-implementation.md  entity-system-production-readiness.md  entity-system-v0.3.1-production-readiness.md  implementation-plan-strategy2-audit-endpoint.md  implementation-plan-strategy5-workspace-metadata.md  workspace-audit-guide.md
scripts/: README.md  REVISED-APPROACH.md  cleanup-cross-contamination.md  cleanup_cross_contamination.py  cleanup_test_projects.py  cross-project-analysis-FINAL.md  cross-project-audit-plan.md  quickstart.sh  validate_config.py
session-handoffs/: 2025-10-27-0821-session-handoff-production-testing.md  2025-10-27-0830-uwo-skill-and-commands-implementation.md  2025-10-27-0950-v0.2.0-release-and-mcp-connection-troubleshooting.md  2025-10-27-1415-production-deployment-complete.md  2025-10-27-1420-v0.2.0-polish-items.md  2025-10-28-0815-entity-system-mvp-implementation-handoff.md  2025-10-29-0710-entity-system-phase3-gaps.md  2025-11-03-0636-expanded-detail-pages-complete.md  2025-11-07-0800-token-limits-pagination-error-handling.md  2025-11-07-1800-phase-2-completion-and-bug-fix.md  20251102_081108_task-viewer-frontend-debugging.md  20251102_113803_phase2-completion-and-cross-contamination-fix.md  20251102_143700_alpine-errors-resolved.md  20251102_150500_task-viewer-refinements.md  20251102_154800_v0.4.0-complete-feature-enhancements-next.md  20251102_210611_entity-viewer-complete-testing-next.md
task-viewer/: .env  .env.example  QUICKSTART.md  README.md  main.py  mcp_client.py  models.py  requirements.txt  test_api.sh  test_sorting.py  workspace_resolver.py
test-results/: .last-run.json
tests/: __init__.py  (+17 more)
(+158 files in other folders)
